# spectrogram

./: README.md  main.py  pyproject.toml
src/spectrogram/: main.py
src/spectrogram/sources/: file.py  stream.py
