[project.scripts]
spectrogram = "spectrogram:main"

[build-system]
requires = ["hatchling>=1.11.0"]
build-backend = "hatchling.build"

[project]
requires-python = ">=3.9"
version = "0.0.1"

name        = "spectrogram"
description = "Create spectrograms from audio files and input data."
readme      = "README.md"
license     = "MIT"

dependencies = [
    "numpy",
    "sounddevice",
    "librosa",
    "matplotlib",
    "",
]


[tool.hatch.build]
ignore-vcs = false
reproducible = true
directory = "dist"
sources = ["src"]
include = ["src/", "LICENSE", "pyproject.toml",]
